<resources>

    <string name="app_name">Online-store</string>
    <string name="main">Главная</string>
    <string name="story">История</string>
    <string name="sell">Продать</string>
    <string name="cart">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="filters">Фильтры</string>
    <string name="nike_example">Nike Air Force 1\'07 Premium</string>
    <string name="about_product">О товаре</string>
    <string name="search_hint">Поиск...</string>
    <string name="product_details">Информация о продукте</string>
    <string name="category">Категория</string>
    <string name="brand">Бренд</string>
    <string name="rating">Рейтинг</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="recently_viewed_products">Недавно просмотренные</string>
    <string name="categories">Категории товаров</string>
    <string name="all_categories">Все категории</string>
    <string name="to_choose_product">К выбору товаров</string>
    <string name="choosing_product_category">Выбор категории товаров</string>
    <string name="clear_selected_categories">Сбросить выбранную категорию</string>
    <string name="search_product">Поиск товаров</string>
    <string name="selected_product_history">История выбранных товаров</string>
    <string name="save_my_product">Сохранить мой товар</string>
    <string name="add_product_img">Добавить фотографию</string>
    <string name="category_of_product">Категория товара(брюки, украшения, футболки)</string>
    <string name="product_description">Описание товара</string>
    <string name="product_name">Имя товара</string>
    <string name="price_as_dollar">Цена($)</string>
    <string name="sell_my_product">Продать мой товар</string>
    <string name="selling_product">Продажа товара</string>
    <string name="save">Сохранить</string>
    <string name="add_main_product_photo">Добавьте основную фотографию</string>
    <string name="adding_product_img">Добавление фотографий</string>
    <string name="add_more_imgs">Добавьте еще фотографий</string>
    <string name="add_secondary_product_photo">Добавьте второстепенную фотографию</string>
    <string name="added_product_photos">Фотографии продукта сохранены!</string>
    <string name="add_secondary_product_photos">Добавьте второстепенные фотографии</string>
    <string name="write_product_name">Введите имя товара</string>
    <string name="write_product_category">Введите категорию товара</string>
    <string name="write_product_brand">Введите бренд товара</string>
    <string name="write_product_price">Введите цену товара</string>
    <string name="write_product_desription">Введите описание товара</string>
    <string name="something_went_wrong">Что-то пошло не так!</string>
    <string name="description_of_the_alert_that_user_can_not_add_new_product">Здравствуйте! К сожалению, у нашего приложения есть ограничение, о котором мы хотим вам сообщить. Ограничение состоит в том, что сайт\n\nhttps://dummyjson.com/\n\nс которым работает наше приложение не поддерживает добавление новых товаров. Это означает, что мы не можем предоставить возможность пользователям добавлять новые товары через эту платформу. \n\nМы понимаем, что это может быть неудобно для вас, и приносим извинения за ограничения.</string>
    <string name="description_of_the_alert_that_user_can_not_buy_product">Здравствуйте! К сожалению, у нашего приложения есть ограничение, о котором мы хотим вам сообщить. Ограничение состоит в том, что сайт\n\nhttps://dummyjson.com/\n\nс которым работает наше приложение не поддерживает проведение денежных транзакций. Это означает, что мы не можем обеспечить возможность пользователям покупать товары через эту платформу. \n\nМы понимаем, что это может быть неудобно для вас, и приносим извинения за ограничения.</string>
    <string name="important_alert">Важное оповещение</string>
    <string name="close">Закрыть</string>
    <string name="one_hundred_dollars">100$</string>
    <string name="product_added_to_cart">Товар добавлен в карзину!</string>
    <string name="your_cart">Ваша корзина</string>
    <string name="buy">Купить</string>
    <string name="delivery">Доставка</string>
    <string name="address">Адрес</string>
    <string name="bank_card">Банковская карта</string>
    <string name="product_purchase">Покупка товара</string>
    <string name="delete_from_cart">Удалить этот продукт с вашей корзины</string>
    <string name="add">Добавить</string>
    <string name="bank_card_number">Номер банковской карты</string>
    <string name="validity">Срок действия</string>
    <string name="three_zeros">000</string>
    <string name="save_and_choose">Сохранить и выбрать</string>
    <string name="write_bank_card_number">Напишите номер банковской карты(обычно номер карты расположен на фронтальной части)</string>
    <string name="write_bank_card_validity">Введите срок действия карты</string>
    <string name="write_CVC">"Введите CVC "</string>
    <string name="added_bank_card">Добавлена банковская карта!</string>
    <string name="CVC">CVC</string>
    <string name="deleting_product_from_cart">Удаление продукта из корзины</string>
    <string name="delete_product_from_cart_ask">Вы действительно хотите удалить данный продукт из вашей корзины?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отменить</string>
    <string name="yes">Да</string>
    <string name="bank_card_with_the_same_card_number_exists">Банковская карта с таким номером уже существует!</string>
    <string name="please_coose_cank_card">Пожалуйста выберете банковскую карту!</string>
    <string name="delivery_address">Адрес для доставки</string>
    <string name="your_name_and_surname">Фамилия и имя покупателя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="city">Город</string>
    <string name="postcode">Почтовый индекс</string>
    <string name="please_write_display_name">Введите имя и фамилию</string>
    <string name="write_phone_number">Введите номер телефона</string>
    <string name="write_city">Введите город для доставки</string>
    <string name="write_postcode">Введите почтовый индекс</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_cards">Банковские карты</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="your_bank_cards">Ваши банковские карты</string>
    <string name="adding_bank_card">Добавление банковской карты</string>

</resources>