<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_page_graph"
        android:icon="@drawable/ic_home"
        android:orderInCategory="0"
        android:title="@string/main" />

    <item
        android:id="@+id/selected_product_history"
        android:icon="@drawable/ic_time"
        android:orderInCategory="1"
        android:title="@string/story" />

    <item
        android:id="@+id/sell_product_graph"
        android:icon="@drawable/ic_add"
        android:orderInCategory="2"
        android:title="@string/sell" />

    <item
        android:id="@+id/product_cart_graph"
        android:icon="@drawable/ic_bag"
        android:orderInCategory="3"
        android:title="@string/cart" />

    <item
        android:id="@+id/user_profile_graph"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="4"
        android:title="@string/profile" />

</menu>