<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/back"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_normal"
    android:paddingEnd="@dimen/margin_normal"
    android:paddingStart="@dimen/margin_normal">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_alert"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleting_product_from_cart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        style="@style/text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_product_from_cart_ask" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/yes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:background="@color/light_gray"
            android:text="@string/cancel"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>