<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page_graph"
    app:startDestination="@id/fragmentHomePage">

    <fragment
        android:id="@+id/fragmentHomePage"
        android:name="com.safronov_original_app_online_store.presentation.fragment.home_page.home_page.FragmentHomePage"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home_page" >
        <action
            android:id="@+id/action_fragmentHomePage_to_fragmentProductDetails"
            app:destination="@id/fragmentProductDetails" />
        <action
            android:id="@+id/action_fragmentHomePage_to_fragmentProductCategory"
            app:destination="@id/fragmentProductCategory" />
    </fragment>

    <fragment
        android:id="@+id/fragmentProductDetails"
        android:name="com.safronov_original_app_online_store.presentation.fragment.home_page.product_details.FragmentProductDetails"
        android:label="@string/product_details"
        tools:layout="@layout/fragment_product_details" />

    <fragment
        android:id="@+id/fragmentProductCategory"
        android:name="com.safronov_original_app_online_store.presentation.fragment.home_page.product_category.FragmentProductCategory"
        android:label="@string/choosing_product_category"
        tools:layout="@layout/fragment_product_category" />

</navigation>