<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile_graph"
    app:startDestination="@id/fragmentUserProfile">

    <fragment
        android:id="@+id/fragmentUserProfile"
        android:name="com.safronov_original_app_online_store.presentation.fragment.all_content.user_profile.FragmentUserProfile"
        android:label="@string/your_profile"
        tools:layout="@layout/fragment_user_profile" >
        <action
            android:id="@+id/action_fragmentUserProfile_to_fragmentUserBankCards"
            app:destination="@id/fragmentUserBankCards" />
    </fragment>

    <fragment
        android:id="@+id/fragmentUserBankCards"
        android:name="com.safronov_original_app_online_store.presentation.fragment.all_content.user_profile.user_bank_cards.FragmentUserBankCards"
        android:label="@string/your_bank_cards"
        tools:layout="@layout/fragment_user_bank_cards" >
        <action
            android:id="@+id/action_fragmentUserBankCards_to_fragmentAddUserBankCards2"
            app:destination="@id/fragmentAddUserBankCards2" />
    </fragment>

    <fragment
        android:id="@+id/fragmentAddUserBankCards2"
        android:name="com.safronov_original_app_online_store.presentation.fragment.all_content.product_cart.product_purchase.bank_card.FragmentAddUserBankCard"
        android:label="@string/adding_bank_card"
        tools:layout="@layout/fragment_add_user_bank_card" />

</navigation>