<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_cart_graph"
    app:startDestination="@id/fragmentProductCartHomePage">

    <fragment
        android:id="@+id/fragmentProductCartHomePage"
        android:name="com.safronov_original_app_online_store.presentation.fragment.home_page.product_cart.FragmentProductCartHomePage"
        android:label="@string/your_cart"
        tools:layout="@layout/fragment_product_cart_home_page" >
        <action
            android:id="@+id/action_fragmentProductCartHomePage_to_fragmentProductPurchase"
            app:destination="@id/fragmentProductPurchase" />
    </fragment>

    <fragment
        android:id="@+id/fragmentProductPurchase"
        android:name="com.safronov_original_app_online_store.presentation.fragment.home_page.product_cart.product_purchase.FragmentProductPurchase"
        android:label="@string/product_purchase"
        tools:layout="@layout/fragment_product_purchase" >
        <action
            android:id="@+id/action_fragmentProductPurchase_to_fragmentAddUserBankCards"
            app:destination="@id/fragmentAddUserBankCards" />
    </fragment>

    <fragment
        android:id="@+id/fragmentAddUserBankCards"
        android:name="com.safronov_original_app_online_store.presentation.fragment.home_page.product_cart.product_purchase.bank_card.FragmentAddUserBankCards"
        android:label="@string/bank_card"
        tools:layout="@layout/fragment_add_user_bank_cards" />

</navigation>