<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.home_page.sell_product.FragmentSellProduct"
    android:background="@color/back">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sell_user_product"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_add_product_img"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_next"
                android:background="@drawable/main_shape_with_ripple_effect"
                android:padding="@dimen/margin_small"
                android:drawablePadding="@dimen/margin_normal"
                android:gravity="center_vertical"
                android:text="@string/add_product_img"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_product_name"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/back"
                app:suffixTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/product_name"
                    android:inputType="textShortMessage"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_product_category"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@color/back"
                app:suffixTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/category_of_product"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_product_brand"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@color/back">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/brand"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_product_price"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@color/back">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/price"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_product_description"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@color/back">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/product_description"
                    android:inputType="textLongMessage|textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sell_user_product"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sell_my_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>