<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.all_content.product_cart.product_purchase.bank_card.FragmentAddUserBankCard"
    android:background="@color/back"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_for_show_button">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_card_number"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/back"
                app:suffixTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtv_card_number"
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/bank_card_number"
                    android:inputType="number|text"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_validity"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/back"
                app:suffixTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtv_card_validity"
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/validity"
                    android:inputType="number|text"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlayout_CVC"
                style="@style/text_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/back"
                app:suffixTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtv_card_CVC"
                    style="@style/edtv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back"
                    android:hint="@string/CVC"
                    android:inputType="textShortMessage"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_bank_card"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>