<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.home_page.sell_product.add_product_photo.FragmentAddProductPhoto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_for_show_button">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_add_img"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_small"
                android:gravity="center_vertical"
                android:text="@string/add_main_product_photo"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/product_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_product_img"
                android:layout_margin="@dimen/margin_small"
                android:adjustViewBounds="true"
                android:background="@drawable/main_shape_with_ripple_effect"
                android:drawingCacheQuality="high"
                android:scaleType="center"
                android:src="@drawable/ic_add_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_show_add_img"
                app:shapeAppearanceOverlay="@style/main_shape_radius" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/replace_main_product_img"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="@dimen/margin_small"
                android:adjustViewBounds="true"
                android:background="@drawable/transparent_circle_shape_with_ripple_effect"
                android:drawingCacheQuality="high"
                android:scaleType="center"
                android:src="@drawable/ic_replace"
                app:layout_constraintEnd_toEndOf="@+id/product_img"
                app:layout_constraintTop_toTopOf="@+id/product_img" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_add_more_imgs"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_small"
                android:gravity="center_vertical"
                android:text="@string/add_secondary_product_photos"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_img" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_more_imgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_show_add_more_imgs" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>